<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" 
    >
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="false"
        android:orientation="vertical" >
		<TextView 
		    android:id="@+id/turkceKelimeTexti"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:inputType="text"
		    android:layout_marginTop="10dp"
		  	android:layout_marginLeft="5dp"
		    />
		<EditText
		    android:id="@+id/kelimeTexti"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center_horizontal"
		    android:enabled="false"
		    android:inputType="text"
		    android:textColor="@android:color/black"
		    android:layout_marginTop="5dp"
		  	android:layout_marginLeft="5dp"
		   	/>
		
		<Button
                android:id="@+id/buttonSil"
                android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
                style="?android:attr/buttonStyleSmall"
                android:layout_gravity="right"
                android:text="@string/Sil" 
                />
		<TextView 
		    	android:id="@+id/countDownTextView"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:gravity="left"
		    />
		
		<Button
                android:id="@+id/buttonIpUcu"
                android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
                style="?android:attr/buttonStyleSmall"
                android:layout_gravity="center_horizontal"
                android:text="@string/IpUcu"
                android:layout_marginTop="10dp" 
                />
		<TextView
		    android:id="@+id/puanTexti"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		  	android:layout_gravity="left"
		  	android:layout_marginTop="20dp"
		  	android:layout_marginLeft="5dp"
		    android:inputType="text"
		    android:text="Puan : 0"
		    android:textSize="20dp"
		    />
    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp" 
        >
		

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b" 
                />

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c" />
			<Button
                android:id="@+id/button4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d" />
			<Button
                android:id="@+id/button5"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

                        <Button
                android:id="@+id/button6"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f" />

            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g" />

            <Button
                android:id="@+id/button8"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/h" />
			<Button
                android:id="@+id/button9"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i" />
			<Button
                android:id="@+id/button10"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/j" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

			<Button
                android:id="@+id/button11"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/k" />

            <Button
                android:id="@+id/button12"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l" />

            <Button
                android:id="@+id/button13"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m" />
			<Button
                android:id="@+id/button14"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n" />
			<Button
                android:id="@+id/button15"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/o" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal" >

			<Button
                android:id="@+id/button16"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p" />

            <Button
                android:id="@+id/button17"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r" />

            <Button
                android:id="@+id/button18"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s" />
			<Button
                android:id="@+id/button19"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t" />
			<Button
                android:id="@+id/button20"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/u" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:gravity="center_horizontal" >

			<Button
                android:id="@+id/button21"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v" />

            <Button
                android:id="@+id/button22"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/y" />

            <Button
                android:id="@+id/button23"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/z" />
			<Button
                android:id="@+id/button24"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/w" />
			<Button
                android:id="@+id/button25"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x" />
        </TableRow>
    </TableLayout>

</RelativeLayout>
