<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/enIyiSkorTextView"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginTop="60dp"
	    android:text="@string/yuksekSkor1"
        />
	<EditText 
	    android:id="@+id/enIyiSkor"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginTop="30dp"
	    android:textColor="@android:color/black"
	    android:enabled="false"
	    />
	
	<TextView 
        android:id="@+id/enIyiSkorTextView2"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginTop="60dp"
	    android:text="@string/yuksekSkor2"
        />
	<EditText 
	    android:id="@+id/enIyiSkor2"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginTop="30dp"
	    android:textColor="@android:color/black"
	    android:enabled="false"
	    />
	
	 <TextView 
        android:id="@+id/enIyiSkorTextView3"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginTop="60dp"
	    android:text="@string/yuksekSkor3"
        />
	<EditText 
	    android:id="@+id/enIyiSkor3"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginTop="30dp"
	    android:textColor="@android:color/black"
	    android:enabled="false"
	    />
</LinearLayout>
